# nde-disk-cleaner

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  scanner.rs  tree.rs
src/lib/: Breadcrumb.svelte  FileDetails.svelte  FileList.svelte  ScanProgress.svelte  Settings.svelte  Sidebar.svelte  Sunburst.svelte  format.ts  ipc.ts  stores.svelte.ts
